# DirSurveiller

./: .gitlab-ci.yml  .gitmodules  .vimrc  CMakeLists.txt  LICENSE.md  README.md  gitlab-ci.sh
doc/: Doxyfile.in
src/: .ycm_extra_conf.py  DirSurveillerConfig.h.in
src/audisp-dirsurv/: CMakeLists.txt  PluginConfig.h.in  au-dirsurv-config.c  au-dirsurv-config.h  audisp-dirsurv.8  audisp-dirsurv.c  audisp-dirsurv.conf  audisp-dirsurv.conf.5  audisp_transport_structs.h  dirsurv-config.h  queue.c  remote-fgets.c
src/ftracer/: ftracer  hello  main.c  makefile
src/opentrace/: bashtrace.sh  bashtrace_wrapper.c  makefile  opentrace.c  opentrace.h  perfTeardown.txt
src/opentrace/utils/: thread_map.c  thread_map.h
src/surveiller/: art.c  surveiller.c
src/tracer/: .bashtrace_wrapper.c.swo  .perfTeardown.txt.swp  CMakeLists.txt  README.txt  bashtrace_wrapper  bashtrace_wrapper.c  kprobe_events  opentrace  opentrace.c  testfile1
src/tracer/utils/: thread_map.c  thread_map.h
src/watchdog/: CMakeLists.txt  containers.c  containers.h  definitions.c  definitions.h  makefile  tests.c  watchdog.c  watchdog.h  watchdog_ctrl.c
src/watchdog/include/: containers.h  database.h  definitions.h  watchdog.h
src/watchdog/src/: containers.c  database.c  database_test.c  definitions.c  tests.c  watchdog.c  watchdog_ctrl.c
